Fixed menu icon on mobile

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
 /* -- NAV BAR -- */
 
 .btn-menu{
-    background: transparent;
+    background: #faf3f2;      /* light accent bg */
     border: none;
     color: #fa6f57;
     cursor: pointer;
@@ -62,13 +62,15 @@ body {
     font-size: 3em;
     font-weight: bold;
     line-height: 1;
-    margin: -0.1em;
+    margin: -0.4em;
+    padding: 0.125em 0.25em;
+    position: fixed;
     transition: all .3s ease-in-out;
 }
     @media (min-width: 600px) {      /* tablet */
         .btn-menu {
             font-size: 4em;
-            margin-top: 1em;
+            margin-top: 0.8em;
         }
     }
     @media (min-width: 900px) {      /* desktop */
@@ -688,7 +690,7 @@ blockquote.panel {
 /* -- MAIN CONTENT --> IMAGES AND PORTFOLIO  */
 
 .logo {
-    display: block;
+    display: inline-block;
     fill: #fa7057;
     margin: 0.5em 0 -2em 0;
     max-width: 70%;
@@ -696,7 +698,7 @@ blockquote.panel {
 }
     @media (min-width: 600px) {      /* tablet */
         .logo {
-            margin-top: 1em;
+            margin-top: 7em;
             max-width: 50%;
         }  
     }
@@ -715,14 +717,14 @@ blockquote.panel {
 .logomobile{
     display: inline-block;
     fill: #fa7057;   /* accent */
-    margin: -2em 0 -1.5em 1em;
+    margin: -1.75em 0 -1.5em 2.75em;
     max-width: 46%;
     transition: all .3s ease-in-out;
     vertical-align: baseline;
 }
     @media (min-width: 600px) {      /* tablet */
         .logomobile {
-            margin: -2em 0 -0.8em 1em;
+            margin: 2.25em 0 -0.8em 3.5em;
             max-width: 46%;
         }  
     }
